...

    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="cl.itau.challenge.presentation.ui.DashboardFragment"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboardFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dashboardFragment"
...
